Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#15025 closed bug (fixed)

Possible bug in pthread_attr_get_np

Reported by: miqlas Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Compiling ruby "miniruby" crashing on Haiku in pthread_attr_get_np somewhere here:

https://github.com/ruby/ruby/blob/f1a52d96a59c63d46cb23af60cdcaf38e30e0512/thread_pthread.c#L636

For more information: https://bugs.ruby-lang.org/issues/15788 and https://github.com/haikuports/haikuports/issues/3791

According to korli:

Looks like a bug in Haiku pthread_getattr_np.


For pthread_attr_get_np() attr should be initialized prior to the call by
using pthread_attr_init(3). pthread_getattr_np() does this
automatically.

Attachments (1)

miniruby-118085-debug-23-04-2019-19-54-51.report (7.1 KB ) - added by miqlas 6 years ago.
Debugger log

Download all attachments as: .zip

Change History (4)

by miqlas, 6 years ago

Debugger log

comment:2 by waddlesplash, 6 years ago

Resolution: fixed
Status: newclosed

Merged in hrev53092.

comment:3 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.