pthread: pthread_getattr_np must call pthread_attr_init().

Fix #15025

Change-Id: Ie0b91714d375d75170b54e81cb31cf18b106ecc1
Reviewed-on: https://review.haiku-os.org/c/1413
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>